--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet/less" type="text/css" href="assets/styles/colors.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/style.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/form.less" />
-        <link rel="stylesheet/less" type="text/css" href="assets/styles/nav.less" />
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/header.less" />
 
         <link rel="stylesheet/less" type="text/css" href="assets/styles/payment-options.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/login.less" />
@@ -29,7 +29,7 @@
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-internal.less">
         <link rel="stylesheet/less" type="text/css" href="assets/styles/creatorMain.less">
 
-        <link rel="stylesheet/less" type="text/css" href="assets/styles/header.less">
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/banner.less">
 
         <link rel="stylesheet/less" type="text/css" href="assets/styles/footer.less">
         <link rel="stylesheet/less" type="text/css" href="assets/styles/top-album.less">
