--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/sidebar.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/LibraryMain.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artist/internalProfile/LibraryMainTableRow.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/LibraryMainTableHeader.jsx"></script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/LibraryMainTable.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/submitMusicMain.jsx"> </script>
