added edit album/song pages

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-search.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-internal.less">
         <link rel="stylesheet/less" type="text/css" href="assets/styles/creatorMain.less">
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/edit-track.less">
 
         <link rel="stylesheet/less" type="text/css" href="assets/styles/banner.less">
 
@@ -68,6 +69,11 @@
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/uploadSuccess.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/downloadNotice.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/tagSuccess.jsx"> </script>
+
+        <script type="text/jsx" src="assets/scripts/artist/internalProfile/artistEditTrack.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artist/internalProfile/artistEditList.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artist/internalProfile/artistEditAlbum.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artist/internalProfile/artistEditSong.jsx"> </script>
 
         <script type="text/jsx" src="assets/scripts/ArtistProfile/ArtistProfileTableHeader.jsx"></script>
         <script type="text/jsx" src="assets/scripts/ArtistProfile/ArtistProfileTableRow.jsx"></script>
