--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -46,7 +46,7 @@
     <body>
         <div id="app" class="content-wrapper"></div> 
 
-        <script type="text/jsx" src="assets/scripts/AutoCompleteTextBox.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/autoCompleteTextBox.jsx"></script>
         
         <!-- JSX Component Files -->
         <script type="text/jsx" src="assets/scripts/header.jsx"> </script>
@@ -81,11 +81,11 @@
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/artistEditAlbum.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/artistEditSong.jsx"> </script>
 
-        <script type="text/jsx" src="assets/scripts/ArtistProfile/ArtistProfileTableHeader.jsx"></script>
-        <script type="text/jsx" src="assets/scripts/ArtistProfile/ArtistProfileTableRow.jsx"></script>
-        <script type="text/jsx" src="assets/scripts/ArtistProfile/ArtistProfileTable.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/ArtistProfile/ArtistProfileHeader.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/ArtistProfile/ArtistProfile.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artistProfile/artistProfileTableHeader.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/artistProfile/artistProfileTableRow.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/artistProfile/artistProfileTable.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artistProfile/artistProfileHeader.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artistProfile/artistProfile.jsx"> </script>
 
         <script type="text/jsx" src="assets/scripts/artist/settings/settingsMain.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/settings/account.jsx"> </script>
