Create Admin side nav

--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
         <script type="text/jsx" src="assets/scripts/filterNav.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/player.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/footer.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/paymentOptions.jsx"></script>
-        <script type="text/jsx" src="assets/scripts/detailedPaymentOptions.jsx"></script>
-        <script type="text/jsx" src="assets/scripts/paymentProcessingPage.jsx"></script>
         <script type="text/jsx" src="assets/scripts/welcomeModal.jsx"></script>
 
+        <!-- Payment -->
+        <script type="text/jsx" src="assets/scripts/payment/paymentOptions.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/payment/detailedPaymentOptions.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/payment/paymentProcessingPage.jsx"></script>
+        
         <!-- Artist -->
         <script type="text/jsx" src="assets/scripts/artist/externalProfile/profileMain.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/externalProfile/featured.jsx"> </script>
@@ -128,6 +130,7 @@
         <!-- Admin -->
         <script type="text/jsx" src="assets/scripts/admin/adminMain.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/admin/adminDashboard.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/admin/adminSideNav.jsx"></script>
         <script type="text/jsx" src="assets/scripts/admin/adminNewSubmissions.jsx"></script>
         <script type="text/jsx" src="assets/scripts/admin/adminNewCreators.jsx"></script>
         <script type="text/jsx" src="assets/scripts/admin/adminNewArtists.jsx"></script>
