Create Creator downloads page UI fully responsive

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-search.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-internal.less">
         <link rel="stylesheet/less" type="text/css" href="assets/styles/creatorMain.less">
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/creatorDownloads.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/edit-track.less">
 
         <link rel="stylesheet/less" type="text/css" href="assets/styles/banner.less">
@@ -104,6 +105,7 @@
         <script type="text/jsx" src="assets/scripts/creator/timeline.jsx"> </script>
 
         <script type="text/jsx" src="assets/scripts/creator/internalProfile/creatorMain.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/creator/internalProfile/creatorDownloads.jsx"></script>
         <script type="text/jsx" src="assets/scripts/creator/internalProfile/featuredArtist.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/creator/internalProfile/topAlbums.jsx"> </script>
 
