--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-search.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-internal.less">
         <link rel="stylesheet/less" type="text/css" href="assets/styles/creatorMain.less">
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/creator-profile.less">
         <link rel="stylesheet/less" type="text/css" href="assets/styles/edit-track.less">
 
         <link rel="stylesheet/less" type="text/css" href="assets/styles/banner.less">
@@ -101,9 +102,16 @@
         <script type="text/jsx" src="assets/scripts/creator/stats.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/creator/timeline.jsx"> </script>
 
+        <!-- Creator Internal -->
         <script type="text/jsx" src="assets/scripts/creator/internalProfile/creatorMain.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/creator/internalProfile/featuredArtist.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/creator/internalProfile/topAlbums.jsx"> </script>
+
+        <!-- Creator External -->
+        <script type="text/jsx" src="assets/scripts/creator/externalProfile/creatorProfileMain.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/creator/externalProfile/creatorProfileHeader.jsx"> </script> 
+        <script type="text/jsx" src="assets/scripts/creator/externalProfile/creatorProfileYouTube.jsx"> </script> 
+        <script type="text/jsx" src="assets/scripts/creator/externalProfile/creatorProfileTags.jsx"> </script> 
 
         <!-- Artist Search -->
         <script type="text/jsx" src="assets/scripts/artistSearch/artistSearchResultsTableHeader.jsx"></script>
