--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <div id="app" class="content-wrapper"></div> 
 
         <script type="text/jsx" src="assets/scripts/autoCompleteTextBox.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/imageUpload/ImageUpload.jsx"></script>
         
         <!-- JSX Component Files -->
         <script type="text/jsx" src="assets/scripts/header.jsx"> </script>
