--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/artistEditList.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/artistEditAlbum.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/artistEditSong.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artist/internalProfile/artistSongDetail.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artist/internalProfile/artistSongDetailHeader.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artist/internalProfile/songDetailChart.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artist/internalProfile/creatorLove.jsx"> </script>
 
         <script type="text/jsx" src="assets/scripts/artistProfile/artistProfileTableHeader.jsx"></script>
         <script type="text/jsx" src="assets/scripts/artistProfile/artistProfileTableRow.jsx"></script>
