Create Artist Search No Results pop up

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         <script type="text/jsx" src="assets/scripts/artistSearch/artistSearch.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artistSearch/searchSidebar.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artistSearch/searchMobile.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artistSearch/artistSearchNoResultsHeader.jsx"> </script>
 
         <!-- Playlist -->
         <script type="text/jsx" src="assets/scripts/playlist/playlistMain.jsx"> </script>
