--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="assets/styles/bootstrap.min.css" />
         <link rel="stylesheet" href="assets/styles/c3.min.css" type="text/css">
         <link rel="stylesheet" href="assets/styles/icons.css">
+        <link rel="stylesheet" href="assets/scripts/imageUpload/cropper.css" />
 
         <link rel="stylesheet/less" type="text/css" href="assets/styles/variables.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/colors.less" />
@@ -161,6 +162,7 @@
         <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js" 
         	integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E=" crossorigin="anonymous"></script>
+        <script src="assets/scripts/imageUpload/cropper.js" type="text/javascript"></script>
         <script type="text/javascript" src="assets/scripts/bootstrap.min.js"></script>
         <script src="https://apis.google.com/js/platform.js" async defer></script>
         <script type="text/javascript" src="assets/scripts/player.js"></script>
