--- a/index.html
+++ b/index.html
@@ -170,12 +170,13 @@
         <script src="assets/scripts/c3.min.js"></script>
 
         <!-- React -->
-        <script src="http://fb.me/react-0.14.7.js"></script>
-        <script src="https://fb.me/react-dom-0.14.7.js"></script>
+        <script src="https://npmcdn.com/react@15.3.1/dist/react.js"></script>
+		<script src="https://npmcdn.com/react-dom@15.3.1/dist/react-dom.js"></script>
 
         <!-- Redux -->
-        <script src="https://npmcdn.com/redux@3.0.4/dist/redux.js"></script>
+        <script src="https://npmcdn.com/redux@3.5.2/dist/redux.js"></script>
         <script src="https://npmcdn.com/react-redux@4.0.0/dist/react-redux.js"></script>
+        <script src="https://npmcdn.com/redux-thunk@2.1.0/dist/redux-thunk.js"></script>
 
         <!-- In-browser JSX transformer, remove when pre-compiling JSX. -->
         <script src="http://fb.me/JSXTransformer-0.13.3.js"></script>
