added in admin submit views

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         <script type="text/jsx" src="assets/scripts/admin/adminNewCreators.jsx"></script>
         <script type="text/jsx" src="assets/scripts/admin/adminNewArtists.jsx"></script>
         <script type="text/jsx" src="assets/scripts/admin/adminChart.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/admin/adminSubmitMusic.jsx"></script>
 
 
         <script type="text/jsx" src="assets/scripts/app.jsx"> </script>
