Audio upload control done

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
         <script type="text/jsx" src="assets/scripts/autoCompleteTextBox.jsx"></script>
         <script type="text/jsx" src="assets/scripts/imageUpload/ImageUpload.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/loadingButton.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/audioUpload.jsx"></script>
         
         <!-- JSX Component Files -->
         <script type="text/jsx" src="assets/scripts/header.jsx"> </script>
