Updated tag selector, added api call for tag data

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <script type="text/jsx" src="assets/scripts/imageUpload/ImageUpload.jsx"></script>
         <script type="text/jsx" src="assets/scripts/loadingButton.jsx"></script>
         <script type="text/jsx" src="assets/scripts/audioUpload.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/tagSelector.jsx"></script>
         
         <!-- JSX Component Files -->
         <script type="text/jsx" src="assets/scripts/header.jsx"> </script>
