--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
         <script type="text/jsx" src="assets/scripts/app.jsx"> </script>
         
         <!-- Core JS Files -->
+        <script src="https://npmcdn.com/bluebird@3.4.6/js/browser/bluebird.min.js" type="text/javascript"></script>
         <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js" 
         	integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E=" crossorigin="anonymous"></script>
