added bookmark and spin history view
partially wired creator profile

--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
         <script type="text/jsx" src="assets/scripts/creator/internalProfile/creatorDownloadsCard.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/creator/internalProfile/featuredArtist.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/creator/internalProfile/topAlbums.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/creator/internalProfile/creatorBookmarkMain.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/creator/internalProfile/creatorSpinHistoryMain.jsx"> </script>
 
         <!-- Creator External -->
         <script type="text/jsx" src="assets/scripts/creator/externalProfile/creatorProfileMain.jsx"> </script>
