Updated the tag selector to use a jQuery plugin selector for better UX

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="assets/styles/c3.min.css" type="text/css">
         <link rel="stylesheet" href="assets/styles/icons.css">
         <link rel="stylesheet" href="assets/scripts/imageUpload/cropper.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.3/css/selectize.default.css" />
 
         <link rel="stylesheet/less" type="text/css" href="assets/styles/variables.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/colors.less" />
@@ -183,6 +184,8 @@
         <script type="text/javascript" src="assets/scripts/player.js"></script>
         <script src="assets/scripts/d3.v3.min.js" charset="utf-8"></script>
         <script src="assets/scripts/c3.min.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.3/js/standalone/selectize.js"></script>
 
         <!-- React -->
         <script src="https://npmcdn.com/react@15.3.1/dist/react.js"></script>
